@@ -38,6 +38,7 @@ constants.class_to_font_glyph = {
   crafter = "D",
   fluid = "B",
   item = "C",
+  lab = "D",
   offshore_pump = "D",
   recipe = "E",
   resource = "F",
@@ -70,6 +71,7 @@ constants.colors = {
 constants.empty_translations_table = {
   gui = {},
   crafter = {},
+  lab = {},
   material = {},
   offshore_pump = {},
   recipe = {},
