@@ -57,6 +57,7 @@ ingredients-tooltip=Ingredients:
 ingredients=Ingredients (__1__)
 item=Item
 keep-open=Keep open
+lab=Lab
 made-in=Made in (__1__)
 material-lowercase=material
 material=Material
@@ -89,6 +90,7 @@ stack-size=Stack size:
 technology=Technology
 unlocked-by=Unlocked by (__1__)
 unresearched=Unresearched
+usable-in=Usable in (__1__)
 view-details=View details
 
 [rb-message]
